fix: prevent ReferenceCard overflow with very long display name

--- a/src/javascript/ContentEditor/DesignSystem/ReferenceCard/ReferenceCard.scss
+++ b/src/javascript/ContentEditor/DesignSystem/ReferenceCard/ReferenceCard.scss
@@ -1,6 +1,8 @@
 .referenceCard {
-    &[disabled="false"] {
-        cursor: pointer;
+    cursor: pointer;
+
+    &[disabled="true"] {
+        cursor: default;
     }
 
     &[draggable="true"] {
